# fastapi-template

./: .env  .gitignore  Dockerfile.dev  compose.yml  entrypoint.sh  main.py  pyproject.toml
docs/: folder_structure_plan.txt
src/api/: __init__.py
src/api/news/: newsletter_router.py
src/api/tracks/: course_router.py  module_router.py  track_router.py
src/config/: __init__.py  settings.py
src/core/: main.py
src/db/: __init__.py  conf.py  pagination.py
src/dependencies/: __init__.py  db_session.py  pagination.py
src/models/: __init__.py  base.py
src/models/news/: __init__.py  newsletter.py
src/models/track/: __init__.py  programs.py
src/repositories/: __init__.py  base.py
src/repositories/news/: newsletter_repo.py
src/repositories/track/: course_repo.py  module_composite.py  module_repo.py  track_repo.py
src/schemas/: __init__.py
src/schemas/common/: __init__.py  responses.py
src/schemas/news/: __init__.py  newsletter.py
src/schemas/tracks/: __init__.py  programs.py
