[project]
name = "cerebro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 112
indent-width = 4
target-version = "py313"
src = ["src"]
respect-gitignore = true          # <-- moved here (valid)
# Optionally: include/exclude patterns
# include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E","W","F","I","C","B","UP","SIM","PERF","PTH","DTZ","PIE","RET","TRY","RUF",
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "E501",
    "B008",
    "RUF012",
    "W191",   # ignore 'indentation contains tabs'
    "E101",   # (optional) mix of spaces/tabs
    "UP007",  # allow use of Optional[...] instead of | None union syntax per project style
]
task-tags = ["TODO","FIXME","XXX"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["config","db","models","schemas","api","dependencies","security","utils"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
split-on-trailing-comma = true
relative-imports-order = "closest-to-furthest"
force-sort-within-sections = true
order-by-type = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # allow re-export star imports
"tests/*" = ["S101"]       # if you later enable Bandit (S), ignore assert warnings
"alembic/*" = ["E402", "F401", "F403"]  # (when you add Alembic scripts)
"src/schemas/tracks/programs.py" = ["UP007"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"
